; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_output.c_print_def_overall_valid_reqs.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_output.c_print_def_overall_valid_reqs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i8*, i32 }

@.str = private unnamed_addr constant [8 x i8] c"numeric\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"green\00", align 1
@T_VALID = common dso_local global i32 0, align 4
@OVERALL_VALID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @print_def_overall_valid_reqs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_def_overall_valid_reqs(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %6, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8** %7, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 2
  %9 = load i32, i32* @T_VALID, align 4
  store i32 %9, i32* %8, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = load i32, i32* @OVERALL_VALID, align 4
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @fpopen_obj_attr(i32* %10, i32 %11, i32 %12)
  %14 = load i32*, i32** %3, align 8
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @print_def_metric(i32* %14, %struct.TYPE_3__* byval(%struct.TYPE_3__) align 8 %5, i32 %15)
  %17 = load i32*, i32** %3, align 8
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @fpclose_obj(i32* %17, i32 %18, i32 0)
  ret void
}

declare dso_local i32 @fpopen_obj_attr(i32*, i32, i32) #1

declare dso_local i32 @print_def_metric(i32*, %struct.TYPE_3__* byval(%struct.TYPE_3__) align 8, i32) #1

declare dso_local i32 @fpclose_obj(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
